# openclaw-android

./: .gitignore  README.md  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/schemas/com.openclaw.native_app.data.db.AppDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: bionic-bypass.js  path-patch.sh
app/src/main/cpp/: node_launcher.cpp
app/src/main/java/com/openclaw/native_app/: AndroidNodeProvider.kt  BootReceiver.kt  BootstrapManager.kt  GatewayService.kt  MainActivity.kt  MainViewModel.kt  NodeBridge.kt  NodeRunner.kt  NotificationInterceptService.kt  OllamaClient.kt  OpenClawApp.kt  SamsungBatteryReceiver.kt  TokenTracker.kt  VoiceManager.kt
app/src/main/java/com/openclaw/native_app/data/db/: AppDatabase.kt  TokenDao.kt  TokenEntity.kt
app/src/main/java/com/openclaw/native_app/di/: AppModule.kt
app/src/main/java/com/openclaw/native_app/ui/screens/: ChannelsScreen.kt  DashboardScreen.kt  HomeScreen.kt  PermissionsScreen.kt  SettingsScreen.kt  SkillsScreen.kt  TokenUsageScreen.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
scripts/: build-now.sh  build-on-mac.sh  bundle-openclaw.sh  compile-koffi-android.sh  get-node-binary.sh  setup-android-sdk.sh
